<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04063c">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/message_layout"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#292929"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Type your message here"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <ImageButton
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/send"
            android:src="@drawable/baseline_send_24"
            android:background="@null"
            android:scaleType="fitCenter"
            android:paddingTop="12dp"
            android:paddingBottom="4dp"
            android:paddingStart="12dp"
            android:paddingEnd="4dp"/>
    </LinearLayout>



</RelativeLayout>