<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_foreground"
            android:title="Home" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
        android:title="Logout"/>
    </group>

</menu>